--- a/frontend/src/pages/detect/Disease.css
+++ b/frontend/src/pages/detect/Disease.css
@@ -1,11 +1,12 @@
-* {
+/* DiseaseRecognition.css */
+.disease-container {
     padding: 0;
     align-items: center;
     margin: 0;
     box-sizing: border-box;
   }
   
-  body {
+  .disease-body {
     font-family: 'Poppins', sans-serif;
     background-color: white;
     width: 100%;
@@ -13,26 +14,26 @@
     align-items: center;
   }
   
-  h2 {
+  .disease-heading {
     text-align: center;
     font-size: 28px;
     color: #627E5D;
     margin-top: 20px;
   }
   
-  input[type="file"] {
+  .disease-file-input {
     display: block;
     margin: 20px auto;
   }
   
-  img {
+  .disease-image {
     display: block;
     margin: 20px auto;
     border: 2px solid #627E5D;
     border-radius: 5px;
   }
   
-  button {
+  .disease-button {
     align-items: center;
     display: block;
     background-color: #66dd51;
@@ -41,52 +42,50 @@
     padding: 10px 20px;
     border-radius: 5px;
     font-size: 20px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 20px auto;
     cursor: pointer;
     transition: background-color 0.3s ease;
   }
   
-  button:hover {
+  .disease-button:hover {
     background-color: #019587;
   }
   
-  p {
+  .disease-paragraph {
     text-align: center;
     font-size: 22px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #72a868;
     margin-top: 20px;
   }
   
-  p.error {
+  .disease-paragraph.error {
     color: #ff4d4d;
   }
   
-  p.loading {
+  .disease-paragraph.loading {
     color: #8CE17D;
   }
-
-  .file-input-container {
+  
+  .disease-file-input-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 20px;
   }
   
-
-  .file-input-container input[type="file"] {
+  .disease-file-input-container input[type="file"] {
     display: none;
   }
   
-
-  .file-input-label {
+  .disease-file-input-label {
     display: inline-block;
     padding: 10px 20px;
     font-size: 20px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: #fff;
-    background-color: #66dd51; 
+    background-color: #66dd51;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s ease;
@@ -94,15 +93,14 @@
     align-items: center;
   }
   
-
-  .file-input-label:hover {
-    background-color: #019587; 
+  .disease-file-input-label:hover {
+    background-color: #019587;
   }
   
-
-  .file-name {
+  .disease-file-name {
     margin-top: 10px;
     font-size: 14px;
     color: #555;
     font-style: italic;
   }
+  
