--- a/frontend/src/pages/report_generation/ReportGenerator.css
+++ b/frontend/src/pages/report_generation/ReportGenerator.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Itim&family=Mogra&display=swap');
 
-body {
+.bodydiv {
   font-family: "Poppins", sans-serif;
   background-image: url('../home/home.jpg'); /* Add your image path */
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   margin: 0;
+  background-color: white;
   padding: 0;
 }
-
+body {
+  background-color: white;
+}
 .report-container {
   width: 1400px;
   margin: 50px auto;
