--- a/frontend/src/pages/detect/components/HeroSection.css
+++ b/frontend/src/pages/detect/components/HeroSection.css
@@ -20,22 +20,28 @@
   
   .hero-text p {
     font-size: 23px;
-    font-weight: bold;
+    /* font-weight: bold; */
     margin-bottom: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-family: 'Kaushan Script', cursive;
   }
   
   .hero-btns .btn {
     display: inline-block;
     margin: 0 10px;
-    padding: 12px 24px;
+    font-size: medium;
+    font-weight: 100;
+    align-items: center;
+    padding: 15px 24px;
     color: white;
-    border: 2px solid white;
+    border: 1px solid rgb(32, 32, 32);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-decoration: none;
     transition: background-color 0.3s, color 0.3s;
   }
   
   .hero-btns .btn:hover {
     background-color: white;
-    color: #333;
+    color: #4d4d4d;
+    border-color: rgb(255, 255, 255);
   }
